# XR-IT-Client-Test

./: .gitignore  .gitmodules  README.md  client-setup.sh  docker-compose-client.yml  docker-compose-orchestrator.yml  docker-compose.yml  package.json
Documentation/.obsidian/: app.json  workspace.json
Documentation/01_Wiki-Info/: Git-Commands.md  Git-Creating-PullRequests.md  Obsidian-Explanation.md
Documentation/03_XR-IT-Application/: Network_Architecture.canvas  Network_Architecture.md
Documentation/04_XR-IT-Configuration-Documents/: .order  Edges_Update.md  XR-IT_Configuration_Management.md
Documentation/06_Test-Cases/: Placeholder_Document.md
Documentation/07_Meeting-Notes/: 20240501-Software-Updates.md  20240618-FE-Architecture.md  20240619-BE-Plugin-Updates.md
Documentation/08_XR-IT-Application-Deprecated/: 0_XR-IT_Software_and_VPN_Prerequisites.md  1_Using_XR-IT_Client_VPN_CLI.md  2_Using_XR-IT_Server_VPN_CLI.md  Proposed XR-IT application workflow.canvas  XR-IT_Visual_Client.md
mock-client-middleman/: package-lock.json
mock-client-middleman/src/: constants.ts  (+1 more)
node-backend/: .gitignore  C#-entrypoint.sh  Dockerfile  README.md  package-lock.json  package.json
node-frontend/: .dockerignore  Dockerfile  entrypoint.sh  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
node-middleman/: README.md  package-lock.json  package.json  tsconfig.json
orchestrator-backend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
orchestrator-frontend/: .lintstagedrc.js  Dockerfile  README.md  package-lock.json  package.json  tailwind-config.d.ts  tailwind.config.ts
services/unreal/core/: CMakeLists.txt  CMakeSettings.json
services/unreal/core/experiments/: CMakeLists.txt
services/unreal/core/experiments/websocket_client/: CMakeLists.txt  websocket_client.cpp
services/unreal/core/experiments/websocket_server/: CMakeLists.txt  websocket_server.cpp
services/unreal/core/include/xrit_unreal/: communication_protocol.h  generate_mock_data.h  guid.h  hash.h  livelink.h  parse_json.h  utility.h  websocket.h
services/unreal/core/include/xrit_unreal/data/: common.h  common_generated.h  communication_protocol.h  communication_protocol_generated.h  configuration.h  configuration_generated.h  guid.h  livelink.h  livelink_generated.h  parse_error.h  parse_error_generated.h
services/unreal/core/include/xrit_unreal/reflect/: parse.h  reflect.h  serialize.h
services/unreal/core/scripts/: build_and_install.py  generate_all_reflection.py  generate_reflection.py
services/unreal/core/src/: communication_protocol.cpp  generate_mock_data.cpp  guid.cpp  livelink.cpp  parse_json.cpp  websocket.cpp
services/unreal/core/src/reflect/: parse.cpp  serialize.cpp
services/unreal/core/tests/: CMakeLists.txt  communication_protocol.cpp  configuration.cpp  guid.cpp  livelink.cpp  parse_json.cpp  reflect.cpp
services/unreal/core/tests/mock/: CMakeLists.txt  generate_mock_data.cpp  mock_unreal_service.cpp  mock_xrit_node.cpp
src/: ConnectClient.ps1  constants.ts  vpnService.ts
xr-it-client-menu/: README.md  package-lock.json  package.json  xrit-client-setup.js
(+468 files in other folders)
